--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "redis": "^4.6.7",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
