--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.2.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^11.9.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "redis": "^4.6.7",
